<resources>
    <string name="app_name">Solbios</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="enter_10_digit_mobile_number">Enter 10 digit mobile number</string>
    <string name="password">Password</string>
    <string name="signin">Login</string>
    <string name="signup">Signup</string>
    <string name="do_not_have_an_account">Do not have an Account?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="by_signing_in_your_agree_to_our_terms_amp_condition_and_privacy_policy"><![CDATA[Terms & condition and Privacy policy]]></string>
    <string name="new_user_sign_up">New user sign up</string>
    <string name="enter_your_name_and_email_id_to_nsign_up_for_a_corporate_account">Enter your name and email id to\nsign up for a corporate account</string>
    <string name="full_name"> Enter your full name</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="please_enter_your_mobile_number_to_n_receive_a_verification">Please enter your mobile number to\n receive a verification</string>
    <string name="please_enter_new_password_to_n_receive_a_verification">Please enter your new password and confirm password to\n receive a verification</string>
    <string name="send_otp">Send Otp</string>
    <string name="back_to_login">Back to Login</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_verification_code_we_n_sent_to_your_mobile_number">Please enter the verification code we\n sent to your mobile number</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="please_check_your_email_and_mobile_number">Please enter 10  digit mobile number</string>
    <string name="new_password">New password</string>
    <string name="submit">Submit</string>



    <string name="face_mask_nthermometer">Face Mask\nThermometer</string>
    <string name="quis_autem_vel_enum_iuer_n_reprehenin_voluptate_velit_eses">Quis autem vel enum iuer\n reprehenin voluptate velit eses</string>
    <string name="shop_now">Shop Now +</string>
    <string name="upload_prescription">UPLOAD PRESCRIPTION</string>
    <string name="please_attach_a_prescription_to_proceed">Please attach a prescription to proceed</string>
    <string name="featured_nproducts">Featured\nProducts</string>
    <string name="sed_ut_perspiciatis_unde_ommis_niste_natus_error">Sed ut perspiciatis unde ommis\niste natus error</string>
    <string name="hot_collection">HOT COLLECTION +</string>
    <string name="upload_new">UPLOAD NEW</string>
    <string name="confirm_password_not_match">confirm password not match</string>
    <string name="reset_password">Reset Password</string>
    <string name="search_medicin"><font size="12">  Search medicines and health products</font></string>
    <string name="popular_categories">Popular categories</string>
    <string name="brands"> Featured brands</string>
    <string name="name">Name</string>
    <string name="upto_90_off">upTo 90% off</string>
    <string name="see_all">See all</string>
    <string name="sort_by">Sort by:</string>
    <string name="relevance">Relevance</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="discount">Discount</string>
    <string name="filter">Filter</string>
    <string name="Rs">\u20B9</string>
    <string name="more">more</string>
    <string name="multiply">*</string>
    <string name="Qty">Qty: </string>
    <string name="Rs1">\u20B9 0</string>
    <string name="Rs2">\u20B9 1000 - \u20B9 1500</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="_100_genuine_n_products">100% genuine\n products</string>
    <string name="_0_products_available">0 products available</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_0">0</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="free_shipping">FREE SHIPPING !</string>
    <string name="total_item_0">Total Item (0)</string>
    <string name="to_be_paid">To be paid</string>
    <string name="price">Price</string>
    <string name="remove">Remove</string>
    <string name="checkout">CHECKOUT</string>
    <string name="oops">oops!</string>
    <string name="you_have_no_item_in_your_n_cart">you have no item in your \n cart</string>
    <string name="add_medicines">ADD MEDICINES</string>
    <string name="item_total_mrp">Item Total( MRP )</string>
    <string name="estimatedshipping_fee">EstimatedShipping Fee</string>
    <string name="price_discount">Price Discount</string>
    <string name="coupon">Coupons</string>
    <string name="coupon_code">Coupon Code:</string>
    <string name="expires">Expires</string>
    <string name="your_shipping_addresses">Your Shipping Addresses</string>
    <string name="add_new">+ADD NEW</string>
    <string name="address">House Number, Building and Locality</string>
    <string name="pinCode">PinCode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="save">Save</string>
    <string name="office">Office</string>
    <string name="other">other</string>
    <string name="mobile">Mobile:</string>
    <string name="no_record_found">No Record Found</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="change">CHANGE</string>
    <string name="your_items">Your Items</string>
    <string name="confirm">CONFIRM</string>
    <string name="cont">CONTINUE</string>
    <string name="pay_on_delivery">PAY ON DELIVERY</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="online_payment">ONLINE PAYMENT</string>
    <string name="complete">Complete</string>
    <string name="ok">Ok</string>
    <string name="congrats_your_payment_n_successfully_done">Your order has  been Confirm</string>
    <string name="congratulation">Congratulation</string>
    <string name="your_orderid">Your OrderId:</string>
    <string name="your_orders">Your Orders</string>
    <string name="my_orders">My Orders</string>
    <string name="order_success">Order Delivered</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="reorder">REORDER</string>
    <string name="amount">Amount:</string>
    <string name="failed">Failed</string>
    <string name="try_again">Try Again</string>
    <string name="my_cart">My Cart</string>
    <string name="your_payment_has_been_failed">Your Payment has been Failed</string>
    <string name="hi_there">Hi, There</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="my_pharmacy_order">My Pharmacy Order</string>
    <string name="about_us">About Us</string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>
    <string name="my_transaction_history">My Transaction History</string>
    <string name="makeing_helathcare">Makeing HelathCare</string>
    <string name="understandable_accessible_n_affordable"><![CDATA[Understandable,Accessible &  \n Affordable]]></string>
    <string name="made_with_love_by_solbios">Made with Love by Solbios</string>
    <string name="order">Order ID:</string>
    <string name="delivery_on">Order On</string>
    <string name="items">Items</string>
    <string name="subtotal">SubTotal</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="total_payable">Total Payable</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="order_details">Order Details</string>
    <string name="no_order_found">No Order Found</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_all">Clear All</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="trending_products">Trending products</string>
    <string name="payment_type">Payment Type</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="again">Try Again</string>
    <string name="no_internet_please_try_again">no Internet Please try Again</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="bearer">Bearer</string>

</resources>