<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomSheet"
        android:background="@drawable/ic_short_by_background"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shortByTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize22"
                    android:fontFamily="@font/p_bold"
                    android:layout_margin="@dimen/margin8" />

                <ImageView
                    android:id="@+id/clearImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin8"
                    android:layout_gravity="end|top"
                    android:src="@drawable/ic_baseline_clear_24" />
            </FrameLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/relevanceRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/relevance" />

                <RadioButton
                    android:id="@+id/lowToHighRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_low_to_high" />

                <RadioButton
                    android:id="@+id/highToLowRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_high_to_low" />

                <RadioButton
                    android:id="@+id/discountRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/discount"

                    />
            </RadioGroup>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>