<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/successImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/check"
            android:layout_marginBottom="@dimen/margin48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           />
        <TextView
            android:id="@+id/completeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulation"
            android:layout_marginTop="@dimen/margin40"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/p_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize22"/>

<TextView
    android:id="@+id/congratsTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/successImageView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center"
    android:textSize="@dimen/textSize18"
    android:layout_marginTop="@dimen/margin32dp"
    android:fontFamily="@font/p_regular"
    android:text="@string/congrats_your_payment_n_successfully_done"/>
<TextView
    android:id="@+id/yourIdTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/congratsTextView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center"
    android:textSize="@dimen/textSize18"
    android:textColor="@color/black"
    android:layout_marginTop="@dimen/margin16"
    android:fontFamily="@font/p_regular"
    android:text="@string/your_orderid"/>

<TextView
    android:id="@+id/myOrdersTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/my_orders"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="#3BB54A"
    android:gravity="center"
    android:textSize="@dimen/textSize18"
    android:fontFamily="@font/p_bold"
    android:layout_marginStart="@dimen/margin16"
    android:layout_marginEnd="@dimen/margin16"
    android:padding="@dimen/margin16"
    android:layout_marginTop="@dimen/margin32dp"
    android:layout_marginBottom="@dimen/margin16"
    android:textColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>