<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.solbios.ui.viewModel.authviewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/newUserTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginTop="@dimen/margin48"
            android:fontFamily="@font/p_bold"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newUserDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginTop="@dimen/margin8"
            android:fontFamily="@font/p_regular"
            android:text="@string/enter_your_name_and_email_id_to_nsign_up_for_a_corporate_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUserTextView" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin48"
            android:layout_marginEnd="@dimen/margin16"
            android:src="@drawable/pills"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginTop="@dimen/margin56"
            android:layout_marginEnd="@dimen/margin24"
            android:layout_marginBottom="@dimen/margin24"
            app:layout_constraintTop_toBottomOf="@id/newUserDetailsTextView">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/p_regular"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:text="@={viewModel.fullName}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NumberTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin24"
            app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
            app:prefixText="+91">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/p_regular"
                android:hint="@string/enter_10_digit_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:text="@={viewModel.mobile}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin24"
            app:layout_constraintTop_toBottomOf="@id/NumberTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_id"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin24"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/p_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/checkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin24"
            android:fontFamily="@font/p_regular"
            android:text="@string/please_check_your_email_and_mobile_number"
            android:textColor="@color/red"
            android:textSize="@dimen/textSize12"
            android:visibility="@{viewModel.textVisibility?View.VISIBLE:View.GONE, default = gone}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberTextInputLayout" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginTop="@dimen/margin40"
            android:layout_marginEnd="@dimen/margin24"
            android:background="@color/purple_500"
            android:fontFamily="@font/p_bold"
            android:gravity="center"
            android:onClick="@{(view) ->viewModel.onSignUp(view)}"
            android:padding="@dimen/margin8"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout" />

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:fontFamily="@font/p_regular"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/textSize16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpTextView" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.progressVisibility?View.VISIBLE:View.GONE, default = gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>